--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li> <button> Sign In</button> </li>
             </ul>
         </header>
+        <!--main-->
         <div class="main">
             <img src="google.png" alt="google">
             <div class="searchbox">
